--- a/public/index.html
+++ b/public/index.html
@@ -20,14 +20,17 @@
 			<p>Welcome to the Vega community website. You will find plenty of resources here to help you learn more about the Vega network. Have a look around, and head over to <a class="link" target="_blank" href="http://vega.xyz/discord">Discord</a> or <a class="link" target="_blank" href="https://t.me/vegacommunity">Telegram</a> if you have questions.</p>
 			<h2>About Vega</h2>
 			<p><a target="_blank" class="link" href="http://vega.xyz">Vega Protocol</a> is a decentralized network, which has been optimized for derivatives trading. Trading on Vega takes place by pseudonymous parties, and there is no requirement to pass KYC or prove your identity to access markets.</p>
-			<p>Vega is composable with all major layer one blockchains. It currently implements a bridge to Ethereum, allowing ERC20 tokens and Ether to be used as collateral for trading.</p>
+			<p>Vega is composable with all layer one blockchains. It currently implements a bridge to Ethereum, allowing ERC20 tokens and Ether to be used as collateral for trading. In future, Vega will also implement bridges to Terra, Bitcoin, Polkadot, and much more.</p>
 			<p>The Vega blockchain uses Tendermint for the consensus layer, and currently processes a new block every ~800ms. The network is capable of processing 1000s of transactions per second.</p>
 			<p>Blockchain transactions are free on Vega, and users only pay fees when their transaction is matched with another trader. This is consistent with how fees work on centralized exchanges.</p>
 			<h2>Contributing</h2>
-			<p>This website is an open source project, and not maintained by the Vega team. It serves as a community hub for information about the Vega project.</p>
+			<p>This website is an open source project, it is not maintained by the Vega team. It serves as a community hub for information about the Vega project.</p>
 			<p>If you would like to contribute to this website head over to <a class="link" target="_blank" href="">GitHub</a> and checkout the README for instructions on how to do so.</p>
-			<h2>Social</h2>
+			<h2>Social Channels</h2>
 			<p><a class="link" target="_blank" href="http://twitter.com/vegaprotocol">@vegaprotocol</a></p>
+			<h2>Network Status</h2>
+			<p><strong>Testnet:</strong> ✅ <a class="link" target="_blank" href="https://testnet.vega.trading">https://testnet.vega.trading</a></p>
+			<p><strong>Mainnet:</strong> 🚧 (estimated Q3 2021)</p>
 			<p></p>
 		</div>
 	</body>
